--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "dev:worker": "node --watch worker.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "dependencies": {
+    "@langchain/community": "^1.1.10",
+    "@langchain/core": "^1.1.18",
+    "@langchain/openai": "^1.2.4",
+    "@langchain/qdrant": "^1.0.1",
+    "bullmq": "^5.67.2",
     "cors": "^2.8.6",
     "express": "~4.22.1",
+    "langchain": "^1.2.16",
     "multer": "^2.0.2"
   },
   "devDependencies": {
