--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "@langchain/core": "^1.1.18",
     "@langchain/openai": "^1.2.4",
     "@langchain/qdrant": "^1.0.1",
+    "@langchain/textsplitters": "^1.0.1",
     "bullmq": "^5.67.2",
     "cors": "^2.8.6",
     "express": "~4.22.1",
     "langchain": "^1.2.16",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "pdf-parse": "1.1.1"
   },
   "devDependencies": {
     "@types/express": "~4.17.25",
