--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,11 @@ services:
     image: valkey/valkey
     ports:
       - 6379:6379
+
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - 6333:6333
    
 
  
