--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@langchain/community": "^1.1.10",
     "@langchain/core": "^1.1.18",
+    "@langchain/ollama": "^1.2.2",
     "@langchain/openai": "^1.2.4",
     "@langchain/qdrant": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
